# midie-seq

./: CMakeLists.txt  eventlist.cpp  eventlist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  midiutil.h  midiworkspace.cpp  midiworkspace.h  pianorollutil.cpp  pianorollutil.h  pianorollwidget.cpp  pianorollwidget.h  sequencer.cpp  sequencer.h  trackchooser.cpp  trackchooser.h
midifile/: CMakeLists.txt
midifile/include/: MidiEventList.h
midifile/src/: MidiEventList.cpp  MidiMessage.cpp
